--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,47 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-
     android:id="@+id/main_drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="renchaigao.com.zujuba.Activity.MainActivity">
 
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/main_constraintLayout"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
         <renchaigao.com.zujuba.widgets.CustomViewPager
             android:id="@+id/main_customView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@+id/main_bootomNavigationView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0">
-
-        </renchaigao.com.zujuba.widgets.CustomViewPager>
-
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
         <android.support.design.widget.BottomNavigationView
             android:id="@+id/main_bootomNavigationView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="0dp"
             android:background="?android:attr/windowBackground"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_alignParentBottom="true"
             app:menu="@menu/navigation" />
-
-    </android.support.constraint.ConstraintLayout>
-
+    </LinearLayout>
 
     <android.support.design.widget.NavigationView
         android:id="@+id/main_navigationView"
@@ -50,9 +33,5 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/left_page_layout"
-        app:menu="@menu/left_page_menu"
-        >
-
-    </android.support.design.widget.NavigationView>
-
+        app:menu="@menu/left_page_menu"/>
 </android.support.v4.widget.DrawerLayout>
