--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,11 +2,12 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-
-
     <!--button style size-->
     <dimen name="button_width_style1">110dp</dimen>
     <dimen name="button_height_style1">46dp</dimen>
+
+    <dimen name="margin_8dp">8dp</dimen>
+    <dimen name="margin_16dp">16dp</dimen>
 
     <!--Material Design Text Size-->
     <dimen name="md_text_size_display4">112sp</dimen>
