--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,10 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorWindowBackground">#FCFCFC</color>
+
+
+    <!--Background color-->
+    <color name="title_background">#e0e0e0</color>
+    <color name="button_background">#ffffff</color>
+    <color name="button_text">#848484</color>
 </resources>
