--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorWindowBackground">#FCFCFC</color>
 
+    <color name="md_text_color_body">#222222</color>
 
     <!--Background color-->
     <color name="title_background">#e0e0e0</color>
