--- a/app/src/main/res/layout/activity_business.xml
+++ b/app/src/main/res/layout/activity_business.xml
@@ -89,16 +89,17 @@
                 android:layout_marginBottom="@dimen/margin_16dp"
                 android:layout_marginTop="@dimen/margin_16dp"
                 android:orientation="vertical"
-                android:visibility="gone">
+                android:visibility="visible">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_gravity="center_horizontal"
-                    android:text="基本信息"
                     android:layout_marginTop="@dimen/margin_64dp"
+                    android:text="基本信息"
                     android:textSize="26sp"
                     android:textStyle="bold" />
+
 
                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/business_join_name_layout"
@@ -378,7 +379,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="@dimen/margin_16dp"
-                            android:text="21:00~24:00" />
+                            android:text="21:00~23:00" />
 
                         <android.support.v7.widget.AppCompatCheckBox
                             android:id="@+id/business_join_introduce_time_checkBox4"
