--- a/app/src/main/res/layout/activity_team.xml
+++ b/app/src/main/res/layout/activity_team.xml
@@ -942,7 +942,7 @@
         <android.support.v4.widget.NestedScrollView
             android:id="@+id/ti_nesteScrollView_People"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="460dp"
             android:visibility="gone">
 
             <android.support.v7.widget.RecyclerView
