--- a/app/src/main/res/layout/activity_deep_forest_game_tactics.xml
+++ b/app/src/main/res/layout/activity_deep_forest_game_tactics.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="renchaigao.com.zujuba.GamePart.DeepForest.DeepForestGameTacticsActivity">
 
-
+<android.support.constraint.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <TextView
         android:id="@+id/textView26"
         android:layout_width="wrap_content"
@@ -273,3 +275,6 @@
         app:layout_constraintTop_toBottomOf="@+id/dfg_tactics_text11" />
 
 </android.support.constraint.ConstraintLayout>
+
+
+</android.support.v4.widget.NestedScrollView>
